--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,21 +18,21 @@ html, body {
     text-align: center;
     height: 100vh;
     align-items: center;
-    background-color: #1A1A1D;
+    background-color: #ff6666;
   }
   
   .joinInnerContainer {
-    width: 20%;
+    width: 25%;
   }
   
   .joinInput {
-    border-radius: 0;
+    border-radius: 0%;
     padding: 15px 20px;
     width: 100%;
   }
   
   .heading {
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 2.5em;
     padding-bottom: 10px;
     border-bottom: 2px solid white;
@@ -42,7 +42,7 @@ html, body {
       color: #fff !important;
       text-transform: uppercase;
       text-decoration: none;
-      background: #2979FF;
+      background: #3385ff;
       padding: 20px;
       border-radius: 5px;
       display: inline-block;
@@ -103,4 +103,33 @@ html, body {
     .container {
       width: 60%;
     }
+  }
+
+  .infoTag {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #ff6666;
+    border-radius: 4px 4px 0 0;
+    height: 60px;
+    width: 100%;
+  }
+  
+  .leftInnerContainer {
+    flex: 0.5;
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    color: white;
+  }
+  
+  .rightInnerContainer {
+    display: flex;
+    flex: 0.5;
+    justify-content: flex-end;
+    margin-right: 5%;
+  }
+  
+  .onlineIcon {
+    margin-right: 5%;
   }
