--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,8 +84,8 @@ html, body {
     justify-content: space-between;
     background: #FFFFFF;
     border-radius: 8px;
-    height: 60%;
-    width: 35%;
+    height: 90%;
+    width: 95%;
   }
   
   @media (min-width: 320px) and (max-width: 480px) {
@@ -119,7 +119,7 @@ html, body {
     flex: 0.5;
     display: flex;
     align-items: center;
-    margin-left: 5%;
+    margin-left: 2%;
     color: white;
   }
   
@@ -127,9 +127,111 @@ html, body {
     display: flex;
     flex: 0.5;
     justify-content: flex-end;
-    margin-right: 5%;
+    margin-right: 2%;
   }
   
   .onlineIcon {
     margin-right: 5%;
+  }
+
+  .form {
+    display: flex;
+    border-top: 2px solid #D3D3D3;
+  }
+  
+  .input {
+    border: none;
+    border-radius: 0;
+    padding: 1%;
+    width: 90%;
+    font-size: 1.2em;
+  }
+  
+  input:focus, textarea:focus, select:focus{
+    outline: none;
+  }
+  
+  .sendButton {
+    color: #fff !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #2979FF;
+    padding: 10px;
+    display: inline-block;
+    border: none;
+    width: 10%;
+  }
+
+  .messageBox {
+    background: #F3F3F3;
+    border-radius: 20px;
+    padding: 5px 20px;
+    color: white;
+    display: inline-block;
+    max-width: 80%;
+  }
+  
+  .messageText {
+    width: 100%;
+    letter-spacing: 0;
+    float: left;
+    font-size: 1.1em;
+    word-wrap: break-word;
+  }
+  
+  .messageText img {
+    vertical-align: middle;
+  }
+  
+  .messageContainer {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 5%;
+    margin-top: 3px;
+  }
+  
+  .sentText {
+    display: flex;
+    align-items: center;
+    font-family: Helvetica;
+    color: #828282;
+    letter-spacing: 0.3px;
+  }
+  
+  .pl-10 {
+    padding-left: 10px;
+  }
+  
+  .pr-10 {
+    padding-right: 10px;
+  }
+  
+  .justifyStart {
+    justify-content: flex-start;
+  }
+  
+  .justifyEnd {
+    justify-content: flex-end;
+  }
+  
+  .colorWhite {
+    color: white;
+  }
+  
+  .colorDark {
+    color: #353535;
+  }
+  
+  .backgroundBlue {
+    background: #2979FF;
+  }
+  
+  .backgroundLight {
+    background: #F3F3F3;
+  }
+  
+  .messages {
+    padding: 5% 0;
+    overflow: auto;
+    flex: auto;
   }
